# Eva-CLI

./: .env  Cargo.toml  LICENSE  eva.db
.github/workflows/: release.yml  rust.yml
src/: add.rs  folders.rs  indexing.rs  init.rs  main.rs  search.rs  show_folders.rs
src/index/: indexing.rs  mod.rs
src/indexing/: indexing.rs  mod.rs
src/search/: mod.rs
src/update/: mod.rs
