[package]
name = "eva"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
walkdir = "2.3.2"
dotenv = "0.15.0"
rusqlite = {version = "0.28.0", features = ["bundled"]}
serde_json = "1.0.97"
serde = "1.0.164"
serde_derive = "1.0.164"
clap = { version = "4.3.5", features = ["derive"] }
